--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,11 @@
 PORT=8000
 CLIENT_URL=http://localhost:3000
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgresql://nodeauth_owner:npg_CANGiFO1X2Py@ep-yellow-mouse-a1cltqb6-pooler.ap-southeast-1.aws.neon.tech/nodeauth?sslmode=require"
